--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-ssmMavenTest/.settings/*
-ssmMavenTest/log.base_IS_UNDEFINED/*
-ssmMavenTest/target/*
-ssmMavenTest/.classpath
-ssmMavenTest/.project
+*/.settings/*
+*/log.base_IS_UNDEFINED/*
+*/target/*
+*/.classpath
+*/.project
