--- a/SpringBootVue/pom.xml
+++ b/SpringBootVue/pom.xml
@@ -77,7 +77,18 @@
     </dependency> 
     
 
-
+    <!-- shiro相关 -->
+    <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-spring</artifactId>
+        <version>1.2.5</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-ehcache</artifactId>
+        <version>1.2.5</version>
+    </dependency>
+	
 
 
     <dependency>
