--- a/SpringBootShiro/pom.xml
+++ b/SpringBootShiro/pom.xml
@@ -113,7 +113,11 @@
       <scope>test</scope>
     </dependency>
     
-
+	<dependency>  
+	    <groupId>com.fasterxml.jackson.core</groupId>  
+	    <artifactId>jackson-databind</artifactId>  
+	    <version>2.8.8</version>  
+	</dependency>
 	
   </dependencies>
   <build>
